// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tabs Component > Snapshot Tests > matches snapshot for basic tabs 1`] = `
<div>
  <div
    class="w-full"
  >
    <div
      class="inline-flex h-10 items-center justify-center rounded-lg bg-surface-100 p-1 text-slate-400"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white"
      >
        标签1
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white"
      >
        标签2
      </button>
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white"
      >
        标签3
      </button>
    </div>
  </div>
</div>
`;

exports[`Tabs Component > Snapshot Tests > matches snapshot with custom styling 1`] = `
<div>
  <div
    class="w-full custom-tabs"
  >
    <div
      class="inline-flex h-10 items-center justify-center rounded-lg bg-surface-100 p-1 text-slate-400 custom-list"
    >
      <button
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1.5 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 text-slate-400 hover:text-white custom-trigger"
      >
        自定义
      </button>
    </div>
  </div>
</div>
`;
